--- a/src/Style/Main.css
+++ b/src/Style/Main.css
@@ -2,14 +2,14 @@
   --background: rgb(243, 242, 239);
   --cards: rgb(255, 255, 255);
   --cardOpacity: rgba(255, 255, 255, 0.9);
-  --button: #ff4b4b;
+  --button: #3e90cc;
+  --btncolor: #ebf2fa;
   --radius: 10px;
   --hover: #ebebeb;
   --font: #000000;
   --red: #ef233c;
   --inputColor: rgb(243, 243, 243);
   --shadows: rgb(201, 201, 201);
-  /* --background */
 }
 
 body {
@@ -23,8 +23,8 @@ body {
 }
 
 .container {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  /* margin-top: 20px; */
+  /* margin-bottom: 20px; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -42,12 +42,14 @@ body {
 }
 .mainTask {
   width: 700px;
-}
-.deets {
-  width: 250px;
   border-top-right-radius: var(--radius);
   border-bottom-right-radius: var(--radius);
 }
+/* .deets {
+  width: 250px;
+  border-top-right-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
+} */
 
 .title {
   font-size: 35px;
@@ -64,8 +66,6 @@ body {
   overflow-y: auto;
   padding-top: 0px !important;
   padding: 10px;
-  /* border-radius: var(--radius); */
-  /* box-shadow: 0px 0px 10px var(--shadows); */
 }
 p,
 h1,
@@ -76,8 +76,16 @@ textarea,
 input,
 select,
 option {
-  font-family: "Open Sans", sans-serif;
+  font-family: "SanFrancisco", sans-serif;
   color: var(--font);
+}
+
+button {
+  color: var(--btncolor);
+  /* outline: none; */
+  /* border-style: none; */
+  border-radius: 5px;
+  background-color: var(--button);
 }
 
 select {
@@ -89,7 +97,7 @@ select {
 p,
 button,
 textarea {
-  font-size: 14px;
+  /* font-size: 14px; */
   margin-bottom: 0px;
 }
 
@@ -112,15 +120,12 @@ input {
   background-color: var(--inputColor);
 }
 
-button {
-  border-radius: var(--radius);
-  background-color: var(--button);
-}
-
-textarea {
+.cardStyle {
   width: 100%;
-  height: 80%;
-  background-color: var(--cards);
+  outline: none;
+  border-style: none;
+  background-color: var(--background);
+  border-radius: var(--radius);
 }
 
 .sticky {
@@ -133,14 +138,8 @@ textarea {
   background-color: var(--cardOpacity);
 }
 
-.priorityDot {
-  font-size: 10px;
-  /* margin: 4px; */
-}
-
 .eachTask {
   padding: 5px;
-  /* margin-bottom: 0px; */
 }
 
 .taskRow {
@@ -167,5 +166,14 @@ textarea {
 }
 
 .svg:hover {
-  background-color: var(--background);
+  background-color: #004a8f69;
+}
+
+.hiddenInput {
+  border: none;
+  outline: none;
+  border-radius: 0;
+  background-color: var(--cards);
+  font-size: 28px;
+  /* cursor: pointer; */
 }
