--- a/src/Style/Main.css
+++ b/src/Style/Main.css
@@ -1,6 +1,5 @@
 :root {
   --background: RGB(45, 45, 45);
-  /* --background: white; */
   --cards: RGB(57, 57, 57);
   --cardOpacity: rgba(57, 57, 57, 0.9);
   --button: #3e90cc;
@@ -18,7 +17,7 @@ body {
   overflow-y: hidden;
 }
 
-#root {
+.mainContainer {
   display: flex;
   justify-content: center;
 }
@@ -26,18 +25,33 @@ body {
 .container {
   display: flex;
   flex-direction: row;
-  justify-content: stretch;
+  justify-content: space-between;
+  padding: 0;
   /* align-items: stretch; */
   position: absolute;
   top: 0;
   bottom: 0;
+  /* left: 0; */
+}
+
+.calendarPage {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.date-picker {
+  width: 220px;
 }
 
 .iconbar {
-  display: flex;
-  justify-content: flex-start;
+  /* display: flex; */
+  /* justify-content: flex-start; */
   width: 50px;
   background-color: var(--button);
+  /* height: 100%; */
 }
 
 .sidebar {
@@ -63,6 +77,7 @@ body {
   padding-top: 0px !important;
   padding: 10px !important;
 }
+
 p,
 h1,
 h2,
