--- a/src/Style/Main.css
+++ b/src/Style/Main.css
@@ -1,14 +1,15 @@
 :root {
-  --background: RGB(45, 45, 45);
-  --cards: RGB(57, 57, 57);
-  --cardOpacity: rgba(57, 57, 57, 0.9);
+  --background: #ffffff;
+  --hoverInput: #c5c5c5;
+  --cards: #ffffff;
+  --cardOpacity: #ffffff90;
   --button: #3e90cc;
   --btncolor: #ebf2fa;
   --radius: 10px;
-  --hover: #575757;
-  --font: #dbe4e3;
+  --hover: var(--hoverInput);
+  --font: #000000;
   --red: #ef233c;
-  --inputColor: RGB(45, 45, 45);
+  --inputColor: var(--hoverInput);
   --shadows: rgb(201, 201, 201);
 }
 
@@ -17,21 +18,30 @@ body {
   overflow-y: hidden;
 }
 
-.mainContainer {
-  display: flex;
-  justify-content: center;
-}
-
 .container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 0;
-  /* align-items: stretch; */
   position: absolute;
   top: 0;
   bottom: 0;
-  /* left: 0; */
+  right: 0;
+  left: 0;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 4fr 12fr 6fr;
+  grid-template-rows: none;
+  width: 100vw;
+  height: 100vh;
+  /* grid-auto-rows: 100%; */
+}
+
+.gridCalendar {
+  display: flex;
+  flex-direction: row;
 }
 
 .calendarPage {
@@ -43,41 +53,50 @@ body {
 }
 
 .iconbar {
-  /* display: flex; */
-  /* justify-content: flex-start; */
-  width: 50px;
+  width: 60px !important;
   background-color: var(--button);
-  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  column-gap: 40px !important;
+}
+
+.gridSettings {
+  display: grid;
+  grid-template-columns: 1fr 12fr;
+  width: 100vw;
+  height: 100vh;
 }
 
 .sidebar {
-  width: 200px;
-}
-.mainTask {
-  width: 700px;
-}
-
-.deets {
-  width: 300px;
-}
-
-.center {
   display: flex;
+  flex-direction: column;
   align-content: center;
+}
+
+/* .taskBadge {
+  width: 200px;
+  align-content: center;
+} */
+
+svg.svgicons,
+.userlogo {
+  margin-bottom: 20px;
 }
 
 .devborders {
   border: 5px;
   background-color: var(--cards);
   overflow-y: auto;
-  padding-top: 0px !important;
-  padding: 10px !important;
+  padding: 20px !important;
 }
 
 p,
 h1,
 h2,
 h3,
+h4,
 button,
 textarea,
 input,
@@ -88,11 +107,10 @@ option {
 }
 
 .btntt {
-  /* color: var(--btncolor); */
   font-weight: bold;
   border-radius: 5px;
-
   background-color: var(--cards);
+  width: 100%;
   border: none;
 }
 
@@ -106,20 +124,8 @@ option {
   background-color: var(--button);
 }
 
-/* 
-font-family: 'JetBrains Mono', monospace;
-font-family: 'Montserrat', sans-serif;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Raleway', sans-serif; 
-*/
-
-/* button {
-  
-  cursor: default;
-} */
-
 select {
-  width: 100px;
+  /* width: 100px; */
   border: none;
   background-color: var(--inputColor);
 }
@@ -135,7 +141,7 @@ textarea {
 }
 
 input {
-  width: 100%;
+  /* width: 100%; */
   height: 30px;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -184,10 +190,10 @@ input {
 
 .modinput,
 .modtxt {
-  /* border: none; */
+  border: none;
   outline: none;
-  border-radius: 0;
-  background-color: #2c2c2c77;
+  border-radius: var(--radius);
+  background-color: var(--inputColor);
   font-size: 20px;
   width: 100%;
 }
