--- a/src/Style/rbc-colors.css
+++ b/src/Style/rbc-colors.css
@@ -2,11 +2,11 @@
   --button: #3e90cc;
   --btncolor: #ebf2fa;
   --accent: #3e90cc;
-  --Cfont: #ffffff;
+  --Cfont: #000000;
   --today: rgba(62, 144, 204, 0.4);
-  --event: rgb(121, 190, 255);
-  --eventHover: rgba(121, 190, 255, 0.9);
-  --offRange: rgba(90, 90, 90, 0.4);
+  --event: rgb(255, 73, 73);
+  --eventHover: rgba(255, 73, 73, 0.8);
+  --offRange: rgba(206, 206, 206, 0.4);
   --offRangeTxt: #c0c0c0;
 }
 
