--- a/src/Style/rbc-colors.css
+++ b/src/Style/rbc-colors.css
@@ -2,7 +2,7 @@
   --button: #3e90cc;
   --btncolor: #ebf2fa;
   --accent: #3e90cc;
-  --Cfont: #000000;
+  --Cfont: var(--font);
   --today: rgba(62, 144, 204, 0.4);
   --event: rgb(255, 73, 73);
   --eventHover: rgba(255, 73, 73, 0.8);
