immutability fixed, more dynamic componenets, media queries+++

--- a/src/Style/Main.css
+++ b/src/Style/Main.css
@@ -3,8 +3,8 @@
   --hoverInput: rgb(57, 57, 57);
   --cards: var(--background);
   --cardOpacity: #ffffff90;
-  --button: #3e90cc;
-  --btncolor: #ebf2fa;
+  --button: #ff4040;
+  --btncolor: #ffffff;
   --radius: 10px;
   --hover: var(--hoverInput);
   --font: rgb(206, 209, 208);
@@ -36,24 +36,24 @@ body {
   grid-template-rows: none;
   width: 100vw;
   height: 100vh;
-  /* grid-auto-rows: 100%; */
 }
 
 .datePriority {
   display: flex;
   flex-flow: row nowrap;
   justify-content: end;
-  align-content: baseline;
+  align-items: baseline;
+  gap: 5px;
 }
 
 .gridCalendar {
   /* display: flex;
   flex-direction: row; */
   display: grid;
-  grid-template-columns: 1fr 12fr;
+  grid-template-columns: 1fr 20fr;
 }
 .calendarWrapper {
-  width: 90vw;
+  width: 100vw - 60px;
   height: 100vh;
 }
 
@@ -124,7 +124,8 @@ option {
   border-radius: 5px;
   background-color: var(--cards);
   width: 100%;
-  border: none;
+  height: min-content;
+  /* border: none; */
 }
 
 .hidden {
@@ -144,7 +145,7 @@ option {
 select {
   /* width: 100px; */
   border: none;
-  background-color: var(--inputColor);
+  background-color: var(--font);
 }
 
 p,
@@ -237,6 +238,7 @@ input {
   background-color: var(--inputColor);
   font-size: 20px;
   width: 100%;
+  height: 90%;
 }
 
 .theModal {
